--- a/index.html
+++ b/index.html
@@ -41,13 +41,10 @@
         </div>
     </header>
     <section id="features" class="features" style="--bs-dark: #0e0f11;--bs-dark-rgb: 14,15,17;background: var(--bs-dark);padding-bottom: 50px;padding-top: 50px;">
-        <!-- Start: Features Boxed -->
         <section class="features-boxed" style="background: rgba(238,244,247,0);">
             <h1 style="font-size: 40px;font-family: Poppins, sans-serif;color: var(--bs-gray-100);text-align: center;">Research Themes</h1>
             <div class="container">
-                <!-- Start: Intro -->
-                <div class="intro"></div><!-- End: Intro -->
-                <!-- Start: Features -->
+                <div class="intro"></div>
                 <div class="row justify-content-center features">
                     <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 402px;">
                         <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 358px;"><i class="fa fa-gear icon" style="color: #ca55f4;font-size: 50px;"></i>
@@ -79,20 +76,15 @@
                             <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Digital Environments<br>Cyber-Physical Mission Environments<br>Design Tool Chains</p>
                         </div>
                     </div>
-                </div><!-- End: Features -->
+                </div>
             </div>
-        </section><!-- End: Features Boxed -->
+        </section>
     </section>
     <section class="cta" style="padding-top: 0px;padding-bottom: 0px;">
-        <!-- Start: Simple Slider -->
         <div class="simple-slider">
-            <!-- Start: Slideshow -->
             <div class="swiper-container">
-                <!-- Start: Slide Wrapper -->
                 <div class="swiper-wrapper">
-                    <!-- Start: Slide-prosperitypartnership -->
                     <div class="swiper-slide" style="height: 700px;background: url(&quot;assets/img/mcr-drone.gif.gif&quot;) center / cover;">
-                        <!-- Start: 1 Row 1 Column -->
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12" style="padding-left: 250px;padding-right: 250px;padding-top: 180px;padding-bottom: 0;transform: translate(21px);">
@@ -104,11 +96,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div><!-- End: 1 Row 1 Column -->
-                    </div><!-- End: Slide-prosperitypartnership -->
-                    <!-- Start: Slide-recruitpdraphd -->
+                        </div>
+                    </div>
                     <div class="swiper-slide" style="height: 700px;background: url(&quot;assets/img/med-facade.jpg&quot;) center / cover;">
-                        <!-- Start: 1 Row 1 Column -->
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12" style="padding-left: 250px;padding-right: 250px;padding-top: 184px;padding-bottom: 0;transform: translate(21px);">
@@ -120,11 +110,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div><!-- End: 1 Row 1 Column -->
-                    </div><!-- End: Slide-recruitpdraphd -->
-                    <!-- Start: Slide-mailinglist -->
+                        </div>
+                    </div>
                     <div class="swiper-slide" style="height: 700px;background: url(&quot;assets/img/website-video-mallard.gif&quot;) center / contain;">
-                        <!-- Start: 1 Row 1 Column -->
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12" style="padding-left: 250px;padding-right: 250px;padding-top: 207px;padding-bottom: 0;transform: translate(21px);">
@@ -136,17 +124,14 @@
                                     </div>
                                 </div>
                             </div>
-                        </div><!-- End: 1 Row 1 Column -->
-                    </div><!-- End: Slide-mailinglist -->
-                </div><!-- End: Slide Wrapper -->
-                <!-- Start: Pagination -->
-                <div class="swiper-pagination"></div><!-- End: Pagination -->
-                <!-- Start: Previous -->
-                <div class="swiper-button-prev" style="color: var(--bs-white);"></div><!-- End: Previous -->
-                <!-- Start: Next -->
-                <div class="swiper-button-next" style="color: var(--bs-white);"></div><!-- End: Next -->
-            </div><!-- End: Slideshow -->
-        </div><!-- End: Simple Slider -->
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev" style="color: var(--bs-white);"></div>
+                <div class="swiper-button-next" style="color: var(--bs-white);"></div>
+            </div>
+        </div>
     </section>
     <footer style="background: rgb(14,15,17);">
         <div class="container">
