--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Home - CRADLE Robotics</title>
     <meta name="description" content="Centre for Robotic Autonomy in Demanding and Long-lasting Environments (CRADLE)">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/best-carousel-slide.css">
     <link rel="stylesheet" href="assets/css/Features-Boxed.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/Simple-Slider.css">
 </head>
@@ -27,7 +27,7 @@
             <div class="col" style="transform: translate(-538px) scale(0.31);"><img src="assets/img/CRADLE%20logos%20simple.png" style="transform: translate(40px);"></div><button class="navbar-toggler float-end" data-bs-toggle="collapse" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" data-bs-target="#navbarResponsive"><i class="fa fa-bars"></i></button>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;assets/img/website-video-bg.gif&quot;) center / cover;">
+    <header class="masthead" style="background: url(&quot;assets/img/website-video-bg.gif&quot;) center / cover, #000000;">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-lg-7 my-auto">
@@ -41,37 +41,37 @@
         </div>
     </header>
     <section id="features" class="features" style="--bs-dark: #0e0f11;--bs-dark-rgb: 14,15,17;background: var(--bs-dark);padding-bottom: 50px;padding-top: 50px;">
-        <section class="features-boxed" style="background: rgba(238,244,247,0);">
+        <section class="features-boxed" style="background: rgba(238,244,247,0);width: 1924px;">
             <h1 style="font-size: 40px;font-family: Poppins, sans-serif;color: var(--bs-gray-100);text-align: center;">Research Themes</h1>
             <div class="container">
-                <div class="intro"></div>
-                <div class="row justify-content-center features">
-                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 402px;">
-                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 358px;"><i class="fa fa-gear icon" style="color: #ca55f4;font-size: 50px;"></i>
+                <div class="intro" style="width: 552px;"></div>
+                <div class="row justify-content-center features" style="width: 1775px;transform: translate(-247px);">
+                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
+                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;"><i class="fa fa-gear icon" style="color: #ca55f4;font-size: 50px;"></i>
                             <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);">Components</h3>
-                            <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Robust Sensor Fusion<br>Confidence Metrics<br>Risk Aware Path Planning and Tracking</p>
+                            <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Robust Sensor Fusion<br>Confidence Metrics<br>Risk Aware Path Planning</p>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 402px;">
-                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 358px;"><i class="fa fa-code icon" style="color: #ca55f4;font-size: 50px;"></i>
+                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
+                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;"><i class="fa fa-code icon" style="color: #ca55f4;font-size: 50px;"></i>
                             <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);">Architectures</h3>
                             <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Transparent Architectures<br>System Aware Architectures<br>Architectures for Robot Collectives</p>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 402px;">
-                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 358px;"><i class="fa fa-handshake-o icon" style="color: #ca55f4;font-size: 50px;"></i>
+                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
+                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;"><i class="fa fa-handshake-o icon" style="color: #ca55f4;font-size: 50px;"></i>
                             <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);">Interactions</h3>
                             <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">From Robots to Humans<br>From Humans to Robots<br>From One to Many<br></p>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 402px;">
-                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 358px;"><i class="fa fa-check-circle icon" style="color: #ca55f4;font-size: 50px;"></i>
+                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
+                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;"><i class="fa fa-check-circle icon" style="color: #ca55f4;font-size: 50px;"></i>
                             <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);">Assurance</h3>
                             <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Evidence Generation<br>New Standards<br>Design for Assurance</p>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 402px;">
-                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 358px;"><i class="fa fa-users icon" style="color: #ca55f4;font-size: 50px;"></i>
+                    <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
+                        <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;"><i class="fa fa-users icon" style="color: #ca55f4;font-size: 50px;"></i>
                             <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);">Demonstration</h3>
                             <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Digital Environments<br>Cyber-Physical Mission Environments<br>Design Tool Chains</p>
                         </div>
@@ -84,6 +84,20 @@
         <div class="simple-slider">
             <div class="swiper-container">
                 <div class="swiper-wrapper">
+                    <div class="swiper-slide" style="height: 700px;background: url(&quot;assets/img/website-video-mallard.gif&quot;) center / contain;">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12" style="padding-left: 250px;padding-right: 250px;padding-top: 207px;padding-bottom: 0;transform: translate(21px);">
+                                    <div class="card" style="background: rgba(255,255,255,0.69);width: 770px;transform: translate(-4px);height: 308px;">
+                                        <div class="card-body" style="padding: 12px;padding-right: 12px;">
+                                            <h4 class="card-title" style="font-family: Poppins, sans-serif;font-size: 35px;padding-left: 40px;padding-right: 40px;padding-bottom: 0px;padding-top: 15px;color: rgb(0,0,0);">Launching Soon!</h4>
+                                            <p class="card-text" style="font-family: 'Open Sans', sans-serif;font-size: 22px;padding-left: 40px;padding-bottom: 20px;padding-right: 40px;padding-top: 15px;color: rgb(0,0,0);">Be among the first to receive updates on the upcoming launch of the CRADLE Prosperity Partnership. Join our mailing list for exclusive news and announcements straight to your inbox.<br></p><a class="btn btn-outline-warning btn-xl" role="button" href="mailto:info@cradlerobotics.co.uk" style="transform: translate(540px);background: #660099;border-radius: 9px;font-family: Poppins, sans-serif;font-size: 16px;">Sign Up&nbsp; &nbsp;&gt;</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="swiper-slide" style="height: 700px;background: url(&quot;assets/img/mcr-drone.gif.gif&quot;) center / cover;">
                         <div class="container">
                             <div class="row">
@@ -106,20 +120,6 @@
                                         <div class="card-body" style="padding: 12px;padding-right: 12px;">
                                             <h4 class="card-title" style="font-family: Poppins, sans-serif;font-size: 35px;padding-left: 40px;padding-right: 40px;padding-bottom: 0px;padding-top: 15px;color: rgb(0,0,0);">Join CRADLE Robotics</h4>
                                             <p class="card-text" style="font-family: 'Open Sans', sans-serif;font-size: 22px;padding-left: 40px;padding-bottom: 20px;padding-right: 40px;padding-top: 15px;color: rgb(0,0,0);">We are looking for researchers with a strong track record in robotics and an appetite for tackling real-world problems in autonomous systems. Send your cover letter and CV to us!<br><br></p><a class="btn btn-outline-warning btn-xl" role="button" href="https://www.findaphd.com/phds/project/robotics-and-autonomous-systems-for-demanding-and-long-lasting-environments-12-phd-studentships-available/?p158654" style="transform: translate(330px);background: #660099;border-radius: 9px;font-family: Poppins, sans-serif;font-size: 16px;">Apply for a Postdoc or PhD&nbsp; &nbsp;&gt;</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide" style="height: 700px;background: url(&quot;assets/img/website-video-mallard.gif&quot;) center / contain;">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-12" style="padding-left: 250px;padding-right: 250px;padding-top: 207px;padding-bottom: 0;transform: translate(21px);">
-                                    <div class="card" style="background: rgba(255,255,255,0.69);width: 770px;transform: translate(-4px);height: 308px;">
-                                        <div class="card-body" style="padding: 12px;padding-right: 12px;">
-                                            <h4 class="card-title" style="font-family: Poppins, sans-serif;font-size: 35px;padding-left: 40px;padding-right: 40px;padding-bottom: 0px;padding-top: 15px;color: rgb(0,0,0);">Launching Soon!</h4>
-                                            <p class="card-text" style="font-family: 'Open Sans', sans-serif;font-size: 22px;padding-left: 40px;padding-bottom: 20px;padding-right: 40px;padding-top: 15px;color: rgb(0,0,0);">Be among the first to receive updates on the upcoming launch of the CRADLE Prosperity Partnership. Join our mailing list for exclusive news and announcements straight to your inbox.<br></p><a class="btn btn-outline-warning btn-xl" role="button" href="mailto:info@cradlerobotics.co.uk" style="transform: translate(540px);background: #660099;border-radius: 9px;font-family: Poppins, sans-serif;font-size: 16px;">Sign Up&nbsp; &nbsp;&gt;</a>
                                         </div>
                                     </div>
                                 </div>
