--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </header>
-    <section style="background: #000000;height: 700px;">
+    <section style="background: #000000;height: 779px;">
         <h1 style="font-size: 40px;font-family: Poppins, sans-serif;color: var(--bs-gray-100);text-align: center;height: 130px;">Work Packages and Research Themes</h1>
         <div class="container">
             <div>
@@ -48,33 +48,33 @@
                     <div class="col">
                         <div class="row justify-content-center features" style="width: 1775px;transform: translate(-247px);">
                             <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
-                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 293px;text-align: center;padding-top: 40px;"><i class="fa fa-gear icon" style="color: #ca55f4;font-size: 50px;"></i>
+                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 458px;text-align: center;padding-top: 40px;"><i class="fa fa-gear icon" style="color: #ca55f4;font-size: 50px;"></i>
                                     <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);padding-top: 15px;padding-bottom: 15px;font-weight: bold;">Components</h3>
-                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Robust Sensor Fusion<br>Confidence Metrics<br>Risk Aware Path Planning</p>
+                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Robust Sensor Fusion<br><br>Human-Understandable <br>Confidence Metrics<br><br>Risk Aware Motion Planning <br>and Control<br><br>Modelling and Control of Complex Robotic Systems</p>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
-                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 293px;text-align: center;padding-top: 40px;"><i class="fa fa-code icon" style="color: #ca55f4;font-size: 50px;"></i>
+                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 458px;text-align: center;padding-top: 40px;"><i class="fa fa-code icon" style="color: #ca55f4;font-size: 50px;"></i>
                                     <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);padding-top: 15px;padding-bottom: 15px;font-weight: bold;">Architectures</h3>
-                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Transparent Architectures<br>System Aware Architectures<br>Architectures for Robot Collectives</p>
+                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);"><br>Transparent Architectures<br><br>System Aware Architectures<br><br>Architectures for Robot Collectives</p>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
-                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 293px;text-align: center;padding-top: 40px;"><i class="fa fa-handshake-o icon" style="color: #ca55f4;font-size: 50px;"></i>
+                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 458px;text-align: center;padding-top: 40px;"><i class="fa fa-handshake-o icon" style="color: #ca55f4;font-size: 50px;"></i>
                                     <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);padding-top: 15px;padding-bottom: 15px;font-weight: bold;">Interactions</h3>
-                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">From Robots to Humans<br>From Humans to Robots<br>From One to Many<br></p>
+                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);"><br>From Robots to Humans<br><br>From Humans to Robots<br><br>From One to Many</p>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
-                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 293px;text-align: center;padding-top: 40px;"><i class="fa fa-check-circle icon" style="color: #ca55f4;font-size: 50px;"></i>
+                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 458px;text-align: center;padding-top: 40px;"><i class="fa fa-check-circle icon" style="color: #ca55f4;font-size: 50px;"></i>
                                     <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);padding-top: 15px;padding-bottom: 15px;font-weight: bold;">Assurance</h3>
-                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Evidence Generation<br>New Standards<br>Design for Assurance</p>
+                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);"><br>Evidence Generation<br><br>New Standards<br><br>Design for Assurance</p>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-5 col-lg-4 item" style="width: 347px;">
-                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 293px;text-align: center;padding-top: 40px;"><i class="fa fa-users icon" style="color: #ca55f4;font-size: 50px;"></i>
-                                    <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);padding-top: 15px;padding-bottom: 15px;font-weight: bold;">Demonstration</h3>
-                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);">Digital Environments<br>Cyber-Physical Mission Environments<br>Design Tool Chains</p>
+                                <div data-bss-hover-animate="pulse" class="box" style="border-radius: 26px;background: #141719;width: 328px;height: 458px;text-align: center;padding-top: 40px;"><i class="fa fa-users icon" style="color: #ca55f4;font-size: 50px;"></i>
+                                    <h3 class="name" style="font-family: Poppins, sans-serif;font-size: 25px;color: var(--bs-gray-100);padding-top: 15px;padding-bottom: 15px;font-weight: bold;">Demonstrators</h3>
+                                    <p class="description" style="font-family: 'Open Sans', sans-serif;color: var(--bs-gray-100);"><br>Requirements and Benchmarking<br><br>Digital Environments<br><br>Cyber-Physical Mission Environments<br><br>Design Tool Chains</p>
                                 </div>
                             </div>
                         </div>
